--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github:
   username: fast1marine # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: CrankTechno # change to your twitter username
 
 social:
   # Change to your full name.
@@ -38,10 +38,10 @@ social:
   email: eric@cranktechnologies.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/CrankTechno # change to your twitter homepage
+    - https://github.com/fast1marine # change to your github homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
+    - https://www.facebook.com/cranktechnologies
     # - https://www.linkedin.com/in/username
 
 google_site_verification: # fill in to your verification string
