--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Crank Technologies # the main title
 tagline: Main site for Crank Technologies and tech blog. # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Crank Technologies. An IT Company for Everyone.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
