--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: 'www.cranktechnologies.com'
+url: 'https://fast1marine.github.io'
 
 github:
   username: fast1marine # change to your github username
